New page, Added grids, images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="container-header">
-      <h1>Name on Store</h1>
+      <p id="logo">Name on Store</p>
       <nav>
         <ul>
           <a href="#">Home</a>
@@ -19,9 +19,9 @@
     </header>
     <main class="container">
       <section class="right">
-        <h1>Name on store</h1>
-        <h3>Welcome!</h3>
-        <p>This is us</p>
+        <h1 class="home-text">Name on store</h1>
+        <h3 class="home-text">Welcome!</h3>
+        <p class="home-text">This is us</p>
       </section>
       <section class="left"></section>
     </main>
