added fonts, icons, and button

--- a/categories.html
+++ b/categories.html
@@ -5,63 +5,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="container-header">
-      <p id="logo">Name on Store</p>
+      <a class="container-logo" href="index.html">
+        <p id="logo-f">F</p>
+        <p id="logo">ictional Worlds</p>
+      </a>
       <nav>
         <ul>
-          <a href="#">Home</a>
-          <a href="shopping-cart.html">Shopping Cart</a>
-          <a href="#">Log In</a>
+          <a href="#">
+            <img class="navigation" src="images/Homee.png" alt="" />
+          </a>
+          <a href="#">
+            <img class="navigation-spy" src="images/spyy.png" alt="" />
+          </a>
+          <a href="shopping-cart.html">
+            <img
+              class="navigation-shopping"
+              src="images/shoppingg.png"
+              alt=""
+            />
+          </a>
+          <a href="#">
+            <img class="navigation-login" src="images/Accountt.png" alt="" />
+          </a>
         </ul>
       </nav>
     </header>
     <main>
       <section class="container-categories">
-        <a href="products.html">
+        <a class="categories" href="products.html">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
         </a>
 
-        <a href="#">
+        <a class="categories" href="#">
           <figure>
             <img src="" alt="" />
           </figure>
@@ -69,7 +97,7 @@
       </section>
     </main>
     <footer>
-      <p>Name on store</p>
+      <p>© 2025 Fictional Worlds</p>
     </footer>
   </body>
 </html>
