--- a/index.html
+++ b/index.html
@@ -5,28 +5,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Name</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Cinzel:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="container-header">
-      <p id="logo">Name on Store</p>
+      <a class="container-logo" href="#">
+        <p id="logo-f">F</p>
+        <p id="logo">ictional Worlds</p>
+      </a>
+
       <nav>
         <ul>
-          <a href="#">Home</a>
-          <a href="shopping-cart.html">Shopping Cart</a>
-          <a href="#">Log In</a>
+          <a href="categories.html">
+            <img class="navigation" src="images/Homee.png" alt="" />
+          </a>
+          <a href="#">
+            <img class="navigation-spy" src="images/spyy.png" alt="" />
+          </a>
+          <a href="shopping-cart.html">
+            <img
+              class="navigation-shopping"
+              src="images/shoppingg.png"
+              alt=""
+            />
+          </a>
+          <a href="#">
+            <img class="navigation-login" src="images/Accountt.png" alt="" />
+          </a>
         </ul>
       </nav>
     </header>
     <main class="container">
-      <section class="right">
-        <h1 class="home-text">Name on store</h1>
-        <h3 class="home-text">Welcome!</h3>
-        <p class="home-text">This is us</p>
+      <section class="left">
+        <h1 class="home-text home-title">Fictional Worlds</h1>
+        <h3 class="home-text">Welcome to the world of fiction!</h3>
+        <p class="home-text">
+          Here at Fictional Worlds you can find all your favorites. If they are
+          fiction, of course. Everything from classics to new releases.
+        </p>
+        <a class="home-b" href="categories.html">
+          <button class="home-button">Start Shopping</button>
+        </a>
       </section>
-      <section class="left"></section>
+
+      <section class="right"></section>
     </main>
     <footer>
-      <p>Name on store</p>
+      <p>© 2025 Fictional Worlds</p>
     </footer>
   </body>
 </html>
