Made categories change color and loom better

--- a/categories.html
+++ b/categories.html
@@ -46,57 +46,42 @@
       </nav>
     </header>
     <main>
+      <h1 id="cat-title">Categories</h1>
       <section class="container-categories">
-        <a class="categories" href="products.html">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="products.html" id="fantasy">
+          <p class="cat">Fantasy</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="romance">
+          <p class="cat">Romance</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="thrillers">
+          <p class="cat">Thriller</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="horror">
+          <p class="cat">Horror</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="mystery">
+          <p class="cat">Mystery</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="mythology">
+          <p class="cat">Mythology</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="historical">
+          <p class="cat">Historical</p>
         </a>
 
-        <a class="categories" href="#">
-          <figure>
-            <img src="" alt="" />
-          </figure>
+        <a class="categories" href="#" id="sci-fi">
+          <p class="cat">Sci-fi</p>
         </a>
       </section>
     </main>
-    <footer>
+    <footer id="cat-footer">
       <p>© 2025 Fictional Worlds</p>
     </footer>
   </body>
