added books to products page

--- a/categories.html
+++ b/categories.html
@@ -46,7 +46,13 @@
       </nav>
     </header>
     <main>
+      <figure class="book-header-fig">
+        <img class="book-header" src="books/header.jpg" alt="" />
+      </figure>
       <h1 id="cat-title">Categories</h1>
+      <figure class="line-fig">
+        <img class="line" src="books/line.png" alt="" />
+      </figure>
       <section class="container-categories">
         <a class="categories" href="products.html" id="fantasy">
           <p class="cat">Fantasy</p>
