--- a/products.html
+++ b/products.html
@@ -49,63 +49,199 @@
     <main>
       <section class="container-products">
         <a class="products" href="product-detail.html">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/dune.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">Dune</p>
+              <p>Frank Herbert</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/atlas-six.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Atlas Six</p>
+              <p>Olivia Blake</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/babel.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">Babel</p>
+              <p>R.F Kuang</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/graceling.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">Graceling</p>
+              <p>Kristin Cashore</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/dark-mirror.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Dark Mir..</p>
+              <p>Samantha Shannon</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/hurricane-wars.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Hurricane..</p>
+              <p>Thea Guanzon</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/orange-tree.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Priory of..</p>
+              <p>Samantha Shannon</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/poppy-war.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Poppy War</p>
+              <p>R.F Kuang</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img class="book" src="books/piransei.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">Piranesi</p>
+              <p>Susanne Clarke</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
 
         <a class="products" href="#">
-          <figure>
-            <img src="" alt="" />
+          <figure class="book-fig">
+            <img
+              class="book"
+              src="books/under-the-whispering-door.jpg"
+              alt=""
+            />
+            <figcaption>
+              <p class="book-title">Under the Wh..</p>
+              <p>TJ Klune</p>
+            </figcaption>
           </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
+        </a>
+
+        <a class="products" href="#">
+          <figure class="book-fig">
+            <img class="book" src="books/spellslinger.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">Spellslinger</p>
+              <p>Sebastien De Castell</p>
+            </figcaption>
+          </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
+        </a>
+
+        <a class="products" href="#">
+          <figure class="book-fig">
+            <img class="book" src="books/the-cruel-prince.jpg" alt="" />
+            <figcaption>
+              <p class="book-title">The Cruel Prin..</p>
+              <p>Holly Black</p>
+            </figcaption>
+          </figure>
+          <section class="book-info">
+            <p class="book-price">130 kr</p>
+            <button class="book-buy">
+              <img class="plus" src="books/32339.png" alt="" />
+            </button>
+          </section>
         </a>
       </section>
     </main>
