--- a/product-detail.html
+++ b/product-detail.html
@@ -47,7 +47,46 @@
       </nav>
     </header>
 
-    <main></main>
+    <main class="container-detail">
+      <section class="dune-left">
+        <figure class="dune-detail">
+          <img class="image-dune" src="books/dune.jpg" alt="dune-book-cover" />
+        </figure>
+      </section>
+
+      <section class="dune-text">
+        <h1 class="title-dune">Dune</h1>
+
+        <p class="frank-dune">Frank Herbert</p>
+
+        <p class="detail-info">
+          Melange, or 'spice', is the most valuable - and rarest - element in
+          the universe; a drug that does everything from increasing a person's
+          life-span to making intersteller travel possible. And it can only be
+          found on a single planet: the inhospitable desert world Arrakis.
+          Whoever controls Arrakis controls the spice. And whoever controls the
+          spice controls the universe. When the Emperor transfers stewardship of
+          Arrakis from the noble House Harkonnen to House Atreides, the
+          Harkonnens fight back, murdering Duke Leto Atreides.
+        </p>
+        <p class="detail-info">
+          Paul, his son, and Lady Jessica, his concubine, flee into the desert.
+          On the point of death, they are rescued by a band for Fremen, the
+          native people of Arrakis, who control Arrakis' second great resource:
+          the giant worms that burrow beneath the burning desert sands. In order
+          to avenge his father and retake Arrakis from the Harkonnens, Paul must
+          earn the trust of the Fremen and lead a tiny army against the
+          innumerable forces aligned against them. And his journey will change
+          the universe.
+        </p>
+
+        <section class="detail-price">
+          <p class="price-font">130 kr</p>
+
+          <button id="add-cart">Add to cart</button>
+        </section>
+      </section>
+    </main>
 
     <footer>
       <p>© 2025 Fictional Worlds</p>
