continued with layout of shopping cart page

--- a/categories.html
+++ b/categories.html
@@ -51,7 +51,7 @@
       </figure>
       <h1 id="cat-title">Categories</h1>
       <figure class="line-fig">
-        <img class="line" src="books/line.png" alt="" />
+        <img class="line" src="images/line.png" alt="" />
       </figure>
       <section class="container-categories">
         <a class="categories" href="products.html" id="fantasy">
