--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -53,11 +53,41 @@
           <figure class="cart-book">
             <img class="book-buying" src="books/dune.jpg" alt="" />
           </figure>
-
-          <button class="minus">-</button>
-          <p class="number">1</p>
-          <button class="plus">+</button>
+          <section>
+            <p class="cart-title">Dune</p>
+            <p class="cart-author">Frank Herbert</p>
+            <section class="add-delete">
+              <button class="minus">
+                <img class="minus-img" src="images/minus.png" alt="" />
+              </button>
+              <p class="number">1</p>
+              <button class="plus-cart">
+                <img class="plus-cart-img" src="books/32339.png" alt="" />
+              </button>
+            </section>
+            <p class="cart-price">130 kr</p>
+          </section>
         </section>
+        <section class="display-side">
+          <figure class="cart-book">
+            <img class="book-buying" src="books/dune.jpg" alt="" />
+          </figure>
+          <section>
+            <p class="cart-title">Dune</p>
+            <p class="cart-author">Frank Herbert</p>
+            <section class="add-delete">
+              <button class="minus">
+                <img class="minus-img" src="images/minus.png" alt="" />
+              </button>
+              <p class="number">1</p>
+              <button class="plus-cart">
+                <img class="plus-cart-img" src="books/32339.png" alt="" />
+              </button>
+            </section>
+            <p class="cart-price">130 kr</p>
+          </section>
+        </section>
+        <button class="buy-now-button">Buy Now</button>
       </section>
 
       <section class="cart2"></section>
