Made pages responsive + minor changes

--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <header class="container-header no-margin">
-      <a class="container-logo" href="#">
+      <a class="container-logo" href="index.html">
         <p id="logo-f">F</p>
         <p id="logo">ictional Worlds</p>
       </a>
