--- a/products.html
+++ b/products.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
     <header class="container-header">
@@ -74,7 +75,7 @@
           </figure>
           <section class="book-info">
             <p class="book-price">130 kr</p>
-            <button class="book-buy">
+            <button class="book-buy" id="buy-dune">
               <img class="plus" src="books/32339.png" alt="" />
             </button>
           </section>
