--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&display=swap"
       rel="stylesheet"
     />
+    <script src="js/main.js" defer></script>
   </head>
   <body>
     <header class="container-header no-margin">
@@ -57,24 +58,25 @@
             <p class="cart-title">Dune</p>
             <p class="cart-author">Frank Herbert</p>
             <section class="add-delete">
-              <button class="minus">
+              <button class="minus" id="dune-delete-cart">
                 <img class="minus-img" src="images/minus.png" alt="" />
               </button>
-              <p class="number">1</p>
-              <button class="plus-cart">
+              <p class="number" id="dune-counter">1</p>
+              <button class="plus-cart" id="dune-add-cart">
                 <img class="plus-cart-img" src="books/32339.png" alt="" />
               </button>
             </section>
             <p class="cart-price">130 kr</p>
           </section>
         </section>
-        <section class="display-side">
+
+        <section class="display-side-two">
           <figure class="cart-book">
-            <img class="book-buying" src="books/dune.jpg" alt="" />
+            <img class="book-buying" src="books/babel.jpg" alt="" />
           </figure>
           <section>
-            <p class="cart-title">Dune</p>
-            <p class="cart-author">Frank Herbert</p>
+            <p class="cart-title">Babel</p>
+            <p class="cart-author">R.F Kuang</p>
             <section class="add-delete">
               <button class="minus">
                 <img class="minus-img" src="images/minus.png" alt="" />
