adding dune and babel to shopping cart

--- a/products.html
+++ b/products.html
@@ -92,7 +92,7 @@
           <section class="book-info">
             <p class="book-price">130 kr</p>
             <button class="book-buy">
-              <img class="plus" src="books/32339.png" alt="" />
+              <img class="plus" id="buy-babel" src="books/32339.png" alt="" />
             </button>
           </section>
         </a>
