--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -50,7 +50,7 @@
 
     <main class="container-cart">
       <section class="cart-page">
-        <section class="display-side">
+        <section id="dune-display">
           <figure class="cart-book">
             <img class="book-buying" src="books/dune.jpg" alt="" />
           </figure>
@@ -66,11 +66,11 @@
                 <img class="plus-cart-img" src="books/32339.png" alt="" />
               </button>
             </section>
-            <p class="cart-price">130 kr</p>
+            <p class="cart-price" id="dune-price">130 kr</p>
           </section>
         </section>
 
-        <section class="display-side-two">
+        <section id="babel-display">
           <figure class="cart-book">
             <img class="book-buying" src="books/babel.jpg" alt="" />
           </figure>
@@ -78,15 +78,15 @@
             <p class="cart-title">Babel</p>
             <p class="cart-author">R.F Kuang</p>
             <section class="add-delete">
-              <button class="minus">
+              <button class="minus" id="babel-delete-cart">
                 <img class="minus-img" src="images/minus.png" alt="" />
               </button>
-              <p class="number">1</p>
-              <button class="plus-cart">
+              <p class="number" id="babel-counter">1</p>
+              <button class="plus-cart" id="babel-add-cart">
                 <img class="plus-cart-img" src="books/32339.png" alt="" />
               </button>
             </section>
-            <p class="cart-price">130 kr</p>
+            <p class="cart-price" id="babel-price">130 kr</p>
           </section>
         </section>
         <button class="buy-now-button">Buy Now</button>
