added balloon, will fix it more soon

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
         </a>
       </section>
 
-      <section class="right"></section>
+      <section class="right">
+        <figure class="balloon-size">
+          <img class="ballon-snake" src="images/balloon.png" alt="balloon" />
+        </figure>
+      </section>
     </main>
     <footer>
       <p>© 2025 Fictional Worlds</p>
