--- a/products.html
+++ b/products.html
@@ -91,8 +91,8 @@
           </figure>
           <section class="book-info">
             <p class="book-price">130 kr</p>
-            <button class="book-buy">
-              <img class="plus" id="buy-babel" src="books/32339.png" alt="" />
+            <button class="book-buy" id="buy-babel">
+              <img class="plus" src="books/32339.png" alt="" />
             </button>
           </section>
         </a>
