javascript test again

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Name</title>
+    <title>Fictional Worlds</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -34,15 +34,11 @@
           <a href="#">
             <img class="navigation-spy" src="images/spyy.png" alt="" />
           </a>
-          <a href="shopping-cart.html">
-            <img
-              class="navigation-shopping"
-              src="images/shoppingg.png"
-              alt=""
-            />
-          </a>
           <a href="#">
             <img class="navigation-login" src="images/Accountt.png" alt="" />
+          </a>
+          <a href="shopping-cart.html">
+            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
           </a>
         </ul>
       </nav>
