--- a/products.html
+++ b/products.html
@@ -34,15 +34,11 @@
           <a href="#">
             <img class="navigation-spy" src="images/spyy.png" alt="" />
           </a>
-          <a href="shopping-cart.html">
-            <img
-              class="navigation-shopping"
-              src="images/shoppingg.png"
-              alt=""
-            />
-          </a>
           <a href="#">
             <img class="navigation-login" src="images/Accountt.png" alt="" />
+          </a>
+          <a href="shopping-cart.html">
+            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
           </a>
         </ul>
       </nav>
@@ -117,7 +113,7 @@
           <figure class="book-fig">
             <img class="book" src="books/dark-mirror.jpg" alt="" />
             <figcaption>
-              <p class="book-title">The Dark Mir..</p>
+              <p class="book-title" id="mirror">The Dark Mir..</p>
               <p>Samantha Shannon</p>
             </figcaption>
           </figure>
