--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -34,15 +34,11 @@
           <a href="#">
             <img class="navigation-spy" src="images/spyy.png" alt="" />
           </a>
-          <a href="shopping-cart.html">
-            <img
-              class="navigation-shopping"
-              src="images/shoppingg.png"
-              alt=""
-            />
-          </a>
           <a href="#">
             <img class="navigation-login" src="images/Accountt.png" alt="" />
+          </a>
+          <a href="shopping-cart.html">
+            <img id="navigation-shopping" src="images/shoppingg.png" alt="" />
           </a>
         </ul>
       </nav>
